fix: main and root element alignment in routes

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,10 @@
+#root {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
 .main {
-  padding-top: 104px;
+  flex: 1;
 }
